--- a/newweb-master/style.css
+++ b/newweb-master/style.css
@@ -42,11 +42,11 @@ body{
 .shutter.top{
     top: 0;
     z-index: 2;
-    animation: slide-top 1s 1.0s forwards 1;
+    animation: slide-top 1s 1s forwards 1;
 }
 .shutter.bottom{
     bottom: 0;
-    animation: slide-bottom 1s 1.0s forwards 1;
+    animation: slide-bottom 1s 1s forwards 1;
 }
 .shutter.top .logo{
     position: absolute;
@@ -206,29 +206,11 @@ body{
 .indicators span.active{
     background: #000;
 }
-.navbar{
-    position: fixed;
-    top: -80px;
-    left: 0;
-    background: black;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 45px;
-    z-index: 8;
-    animation: slide-top 1.0s 1s forwards 1;
-    animation-direction: alternate-reverse;
-}
+
 .brand-logo{
     height: 45px;
 }
-.brand-name{
-    color: greenyellow;
-    font-size: 20px;
-    font-weight: 400;
-    text-transform: uppercase;
-}
+
 .model-container{
     width: 100%;
     height: 100%;
@@ -717,4 +699,101 @@ display: block;
   margin-top: 10px;
   margin-bottom: 20px;
 }
+}
+.navbar{
+    
+    position: fixed;
+    top: -80px;
+    left: 0;
+    background:black;
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 90px;
+    z-index: 8;
+    animation: slide-top 3s 1s forwards 1;
+    animation-direction: alternate-reverse;
+    
+}
+.model-container{
+    width: 100%;
+    height: 100%;
+    position: relative;
+    overflow: hidden;
+    background: #000;
+    padding: 40px 5vw;
+    z-index: 3;
+    margin-top: 2%;
+}
+.header {
+    height: 100vh;
+    background-image: url(Images/wallpaperflare.com_wallpaper.jpg);
+    background-size: cover;
+    background-position: top;
+    position: relative;
+}
+
+.brand-box {
+    position: absolute;
+    top: 40px;
+    left: 40px;
+}
+
+.brand { font-size: 20px; }
+
+.text-box {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+
+.heading-primary {
+    color: #fff;
+    text-transform: uppercase;
+
+    backface-visibility: hidden;
+    margin-bottom: 30px;
+}
+
+.heading-primary-main {
+    display: block;
+    font-size: 26px;
+    font-weight: 400;
+    letter-spacing: 5px;
+}
+
+.heading-primary-sub {
+    display: block;
+    font-size: 18px;
+    font-weight: 700;
+    letter-spacing: 7.4px;
+}
+.slider-menu {
+	position: absolute;
+	top: 0;
+	right: 0;
+	display: flex;
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+	z-index: 1;
+}
+.slider-menu > li {
+	display: inline-flex;
+	padding: 14px;
+	margin-left: 2px;
+	font-family: 'Quicksand', sans-serif;
+	color: #fff;
+	cursor: pointer;
+	transition: 0.3s linear all;
+	user-select: none;
+}
+.slider-menu > li:hover {
+	background-color: gray;
+    border-radius: 10px;
+	box-shadow: 0 50px 5px rgba(0, 0, 0, 0.15) inset;
 }
