--- a/newweb-master/style.css
+++ b/newweb-master/style.css
@@ -219,14 +219,14 @@ body{
     background: #000;
     padding: 40px 5vw;
     z-index: 3;
-    margin-top: 2%;
+    margin-top: 1%;
 }
 .model-img{
     position: absolute;
     top: 0;
     max-width: 50%;
     min-height: 100%;
-    clip-path: polygon(0 0, 100% 0, 70% 100%, 0% 100%);
+    /*clip-path: polygon(0 0, 100% 0, 70% 100%, 0% 100%);*/
     object-fit: contain;
 }
 .model-img:nth-child(3){
@@ -239,12 +239,14 @@ body{
     right: -15%;
 }
 .model-content{
+    margin-top: 1%;
     position: relative;
     color: greenyellow;
     text-transform: uppercase;
 }
 .heading{
     font-size: 40px;
+    padding-top: 7%;
 }
 .model-name{
     font-size: 120px;
@@ -561,9 +563,12 @@ body{
 }
 .dropbtn {
     padding: -1px;
+    margin-top: 5%;
   }
   
   .dropdown {
+    padding-left: 3%;
+    text-decoration: underline;
     position: relative;
     display: inline-block;
   }
@@ -745,7 +750,7 @@ display: block;
 
 .text-box {
     position: absolute;
-    top: 50%;
+    top: 65%;
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
@@ -796,4 +801,192 @@ display: block;
 	background-color: gray;
     border-radius: 10px;
 	box-shadow: 0 50px 5px rgba(0, 0, 0, 0.15) inset;
+}
+.section2{
+    height: 85vh;
+    width: 100%;
+}
+.section21 {
+    background: #f4f4f4;
+    padding: 5px 0;
+}
+.container {
+    max-width: 70%;
+    margin: 0;
+    padding: 0 20px;
+}
+.carousel {
+    display: block;
+    text-align: left;
+    position: relative;
+    margin-bottom: 22px;
+}
+.carousel > input {
+    clip: rect(1px, 1px, 1px, 1px);
+    clip-path: inset(50%);
+    height: 1px;
+    width: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+}
+.carousel > input:nth-of-type(6):checked ~ .carousel__slides .carousel__slide:first-of-type {
+    margin-left: -500%;
+}
+.carousel > input:nth-of-type(5):checked ~ .carousel__slides .carousel__slide:first-of-type {
+    margin-left: -400%;
+}
+.carousel > input:nth-of-type(4):checked ~ .carousel__slides .carousel__slide:first-of-type {
+    margin-left: -300%;
+}
+.carousel > input:nth-of-type(3):checked ~ .carousel__slides .carousel__slide:first-of-type {
+    margin-left: -200%;
+}
+.carousel > input:nth-of-type(2):checked ~ .carousel__slides .carousel__slide:first-of-type {
+    margin-left: -100%;
+}
+.carousel > input:nth-of-type(1):checked ~ .carousel__slides .carousel__slide:first-of-type {
+    margin-left: 0%;
+}
+.carousel > input:nth-of-type(1):checked ~ .carousel__thumbnails li:nth-of-type(1) {
+    box-shadow: 0px 0px 0px 5px rgba(0, 0, 255, 0.5);
+}
+.carousel > input:nth-of-type(2):checked ~ .carousel__thumbnails li:nth-of-type(2) {
+    box-shadow: 0px 0px 0px 5px rgba(0, 0, 255, 0.5);
+}
+.carousel > input:nth-of-type(3):checked ~ .carousel__thumbnails li:nth-of-type(3) {
+    box-shadow: 0px 0px 0px 5px rgba(0, 0, 255, 0.5);
+}
+.carousel > input:nth-of-type(4):checked ~ .carousel__thumbnails li:nth-of-type(4) {
+    box-shadow: 0px 0px 0px 5px rgba(0, 0, 255, 0.5);
+}
+.carousel > input:nth-of-type(5):checked ~ .carousel__thumbnails li:nth-of-type(5) {
+    box-shadow: 0px 0px 0px 5px rgba(0, 0, 255, 0.5);
+}
+.carousel > input:nth-of-type(6):checked ~ .carousel__thumbnails li:nth-of-type(6) {
+    box-shadow: 0px 0px 0px 5px rgba(0, 0, 255, 0.5);
+}
+.carousel__slides {
+    position: relative;
+    z-index: 1;
+    padding: 0;
+    margin: 0;
+    overflow: hidden;
+    white-space: nowrap;
+    box-sizing: border-box;
+    display: flex;
+}
+.carousel__slide {
+    position: relative;
+    display: block;
+    flex: 1 0 100%;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    transition: all 300ms ease-out;
+    vertical-align: top;
+    box-sizing: border-box;
+    white-space: normal;
+}
+.carousel__slide figure {
+    display: flex;
+    margin: 0;
+}
+.carousel__slide div {
+    position: relative;
+    width: 100%;
+}
+.carousel__slide div:before {
+    display: block;
+    content: "";
+    width: 100%;
+    padding-top: 66.6666666667%;
+}
+.carousel__slide div > img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+}
+.carousel__slide img {
+    display: block;
+    flex: 1 1 auto;
+    object-fit: cover;
+}
+.carousel__slide figcaption {
+    align-self: flex-end;
+    padding: 20px 20px 0 20px;
+    flex: 0 0 auto;
+    width: 25%;
+    min-width: 150px;
+}
+.carousel__slide .credit {
+    margin-top: 1rem;
+    color: rgba(0, 0, 0, 0.5);
+    display: block;
+}
+.carousel__slide.scrollable {
+    overflow-y: scroll;
+}
+.carousel__thumbnails {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    margin: 0 -10px;
+}
+.carousel__slides + .carousel__thumbnails {
+    margin-top: 20px;
+}
+.carousel__thumbnails li {
+    flex: 1 1 auto;
+    max-width: calc((100% / 6) - 20px);
+    margin: 0 10px;
+    transition: all 300ms ease-in-out;
+}
+.carousel__thumbnails label {
+    display: block;
+    position: relative;
+}
+.carousel__thumbnails label:before {
+    display: block;
+    content: "";
+    width: 100%;
+    padding-top: 100%;
+}
+.carousel__thumbnails label > img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+}
+.carousel__thumbnails label:hover, .carousel__thumbnails label:focus {
+    cursor: pointer;
+}
+.carousel__thumbnails label:hover img, .carousel__thumbnails label:focus img {
+    box-shadow: 0px 0px 0px 1px rgba(0, 0, 0, 0.25);
+    transition: all 300ms ease-in-out;
+}
+.carousel__thumbnails img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+@media (min-width: 992px) and (max-width: 1199.98px) {
+    .heading{
+        padding-top: 9%;
+    }
+}
+@media (min-width: 768px) and (max-width: 991.98px) {
+    .heading{
+        margin-top: 10%;
+    }
 }
