--- a/newweb-master/style.css
+++ b/newweb-master/style.css
@@ -577,7 +577,7 @@ body{
     display: none;
     position: absolute;
     background-color: #191919;
-    min-width: 500px;
+    min-width: 290px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
     font-size: large;
@@ -798,7 +798,7 @@ display: block;
 	user-select: none;
 }
 .slider-menu > li:hover {
-	background-color: gray;
+    cursor: pointer;
     border-radius: 10px;
 	box-shadow: 0 50px 5px rgba(0, 0, 0, 0.15) inset;
 }
